--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div id="searchBox">
                     <form method="get">
                         <input type="text" class="text">
-                        <input type="submit" value="Search a topic">
-
+                        
+                        <input type="submit" value="Search a topic" class="submit">
                     </form>
                 </div>
             </div>
