--- a/index.html
+++ b/index.html
@@ -20,11 +20,25 @@
                         <input type="submit" value="Search a topic" class="submit">
                     </form>
                 </div>
+                <div class="clear">
+
+                </div>
+            </div>
+            <div id="menu">
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">Online Tutorials</a></li>
+                    <li><a href="#">Get A Private Tutor</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="#">Contact Us</a></li>
+
+                </ul>
             </div>
 
-
-        </div>
-
+            
+            </div>
+          
 
     </body>
 </html>
+
