added body paragraph

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
 
                 </ul>
             </div>
+                <div id="introduction">
+                    <h3>Do you need help learning math?</h3>
+                    <p>This website uses an interactive methodology of teach Math using the latest web technologies.
+                        Your learning experience with us is guaranteed to be intuitive and fun. You will have fun while learning.
 
+                    </p>
+                </div>
             
             </div>
           
