--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Math Website</title>
+        <title>Code Website</title>
         <meta name="viewport" content="width=device-width, initial-scale = 1.0, user scalable=yes">
         <link rel="stylesheet" href="styling.css">
     </head>
@@ -11,7 +11,7 @@
         <div id="container">
             <div id="header">
                 <div id="brand">
-                    <h1><a>Learning Math is Fun!</a></h1>
+                    <h1><a>Learning to Code is Fun!</a></h1>
                 </div>
                 <div id="searchBox">
                     <form method="get">
@@ -35,11 +35,42 @@
                 </ul>
             </div>
                 <div id="introduction">
-                    <h3>Do you need help learning math?</h3>
-                    <p>This website uses an interactive methodology of teach Math using the latest web technologies.
-                        Your learning experience with us is guaranteed to be intuitive and fun. You will have fun while learning.
-
+                    <h3>Do you need help learning how to Code?</h3>
+                    <p>This website uses an interactive methodology of teaching code using the latest web technologies.
+                        Your learning experience with us is guaranteed to be intuitive and fun. You will have fun while learning!
+                        This is the secret of our outstanding results. Check reviews from our students!
                     </p>
+                </div>
+                <div id="leftsidebar" class="sidebar">
+                    <h3>Go to:</h3>
+                    <ul>
+                        <li><a href="">Grade 1 Free Lessons</a></li>
+                        <li><a href="">Grade 2 Free Lessons</a></li>
+                        <li><a href="">Grade 3 Free Lessons</a></li>
+                        <li><a href="">Grade 4 Free Lessons</a></li>
+                        <li><a href="">Grade 5 Free Lessons</a></li>
+                        <li><a href="">Grade 6 Free Lessons</a></li>
+                        <li><a href="">Grade 7 Free Lessons</a></li>
+                        <li><a href="">Grade 8 Free Lessons</a></li>
+                        <li><a href="">Grade 9 Free Lessons</a></li>
+                        <li><a href="">Grade 10 Free Lessons</a></li>
+                        <li><a href="">Grade 11 Free Lessons</a></li>
+                        <li><a href="">Grade 12 Free Lessons</a></li>
+                    </ul>
+
+                </div>
+                <div id="rightsidebar" class="sidebar">
+                    <h3>Why Us?</h3>
+                    <ul>
+                        <li><a href="">Our Instructors are available 24/7!</a></li>
+                        <li><a href="">Courses are available on desktop, tablet and mobile devices!</a></li>
+                        <li><a href="">30 day Money Back Gurantee!</a></li>
+                        <li><a href="">Interactive Games for a fun learning experience!</a></li>
+                        <li><a href="">Learn at your own pace!</a></li>
+                        <li><a href="">Complete course curriculum!</a></li>
+                        
+                    </ul>
+
                 </div>
             
             </div>
