--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
                     </ul>
 
                 </div>
+                <div class="clear">
+                    <footer class="footer">
+                        <div>
+                            <p>Company name. Copyright &copy; 2020</p>
+                        </div>
+
+                    </footer>
+                </div>
             
             </div>
           
